--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Rittik Pradhan. </p>
             <img class="portrait" src ="/img/me.png">
         </div>
 
